fix(修改): 修改模板生成